# ftmerrychristmas

./: README.md  pyproject.toml
src/: main.py  main2.py
src/assets/: asset_info.txt  localisation.csv
