[project]
name = "ftmerrychristmas"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Creative Media Group", email = "42028373+tct123@users.noreply.github.com" },
]
dependencies = ["flet>=0.84.0", "mylocale"]

[dependency-groups]
dev = ["flet-cli>=0.84.0", "flet-desktop>=0.84.0", "flet-web>=0.84.0"]

[tool.flet]
desktop_flavor = "light"                      # Change to "full" to use flet-audio and flet-video
org = "com.mycompany"
product = "ftmerrychristmas"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"
